# llmops-series

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: task_defination.json
config/: config.yaml
data/: goldens.csv
exception/: custom_exception.py
faiss_index/session_20251111_183735_67b27796/: index.pkl  ingested_meta.json
faiss_index/session_20251111_205336_999dea9f/: index.pkl  ingested_meta.json
faiss_index/session_20251111_212636_7e729d3d/: index.pkl  ingested_meta.json
faiss_index/session_20251111_212809_f4370fe5/: index.pkl  ingested_meta.json
faiss_index/session_20251111_213306_958d9f24/: index.pkl  ingested_meta.json
faiss_index/session_20251111_213836_cf28940a/: index.pkl  ingested_meta.json
faiss_index/session_20251111_214421_870f652a/: index.pkl  ingested_meta.json
faiss_index/session_20251111_214911_822a7e88/: index.pkl  ingested_meta.json
faiss_index/session_20251114_215225_238825f8/: index.pkl  ingested_meta.json
faiss_index/session_20251114_215852_0615fd28/: index.pkl  ingested_meta.json
faiss_index/session_20251114_220704_4628eb84/: index.pkl  ingested_meta.json
faiss_index/session_20251114_220756_0799e022/: index.faiss  index.pkl  ingested_meta.json
faiss_index/session_20260117_104743_e5bf9c7a/: index.pkl  ingested_meta.json
faiss_index/session_20260203_071115_89cf5208/: index.pkl  (+1 more)
logger/: custom_logger.py
notebook/: evaluations.ipynb  rag.ipynb
static/: styles.css
templates/: index.html
tests/: conftest.py
utils/: document_ops.py  file_io.py  model_loader.py
(+143 files in other folders)
