[project]
name = "llmops-series"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx2txt==0.8",
    "ipykernel==6.25.2",
    "langchain==0.3.27",
    "langchain-community==0.3.27",
    "langchain-core==0.3.72",
    "langchain-google-genai==2.1.0",
    "langchain-groq==0.3.6",
    "langchain-openai==0.2.10",
    "langsmith>=0.4.38",
    "openai>=1.109.1",
    "pypdf>=6.1.3",
    "python-dotenv>=1.0.1",
    "python-multipart==0.0.6",
    "rapidocr-onnxruntime>=1.4.4",
]
